# kumir2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
cmake/: Kumir2Config.cmake
cmake/kumir2/: kumir2_apple.cmake  kumir2_common.cmake  kumir2_linux.cmake  kumir2_win32.cmake
include/kumir2/: actorinterface.h  analizer_compilerinterface.h  analizer_helperinterface.h  analizer_instanceinterface.h  analizer_sourcefileinterface.h  analizerinterface.h  browser_instanceinterface.h  browserinterface.h  coursesinterface.h  editor_instanceinterface.h  editorinterface.h  generatorinterface.h  guiinterface.h  lexemtype.h  plugininterface.h  runinterface.h  startpage_widget_interface.h
jaos/: пример-яос.kum  связь-с-яос.kum  яос-голый.kum
scripts/: gen_actor_source.py
scripts/mingw/: mingw32.cmake  qt4-cfg-001.sh  qt4-patch-001.patch
share/kumir2/translations/: CoreGUI_ru.ts
src/actors/complexnumbers/: complexnumbersmodule.cpp
src/actors/draw/: drawmodule.cpp
src/actors/grasshopper/: CMakeLists.txt  dialog.cpp  dialog.h  grasshoppermodule.cpp  kuznec.cpp  kuznec.h  pult.cpp  pult.h
src/actors/isometricrobot/: cellgraphicsitem.cpp  isometricrobotmodule.cpp  robotitem.cpp  robotview.cpp  sch_game.cpp
src/actors/jaos/: CMakeLists.txt  JAOS.pluginspec  echoclient.cpp  echoclient.h  jaos.json  jaosmodule.cpp  jaosmodule.h  jaosmodule_my.cpp  jaosmodule_my.h
src/actors/jaos2/: jaos2.json
src/actors/keyboard/: keyboardmodule.cpp  keyboardmodule.h
src/actors/keyboardlayout/: CMakeLists.txt  keyboardlayout.json  keyboardlayoutmodule.cpp  keyboardlayoutmodule.h
src/actors/painter/: paintermodule.cpp
src/actors/robot/: CMakeLists.txt  editline.cpp  pult.cpp  pult.h  rfield.cpp  rfield.h  robot.json  robotmodule.cpp  robotmodule.h  robotmodulebase.cpp  robotmodulebase.h  robotplugin.cpp  robotplugin.h  robotview.cpp  robotview.h  srobot.cpp  srobot.h
src/actors/turtle/: turtle.cpp  turtlemodule.cpp  turtlemodule.h
src/actors/vodoley/: CMakeLists.txt  dialog.cpp  dialog.h  otimer.cpp  otimer.h  pult.cpp  pult.h  vial.cpp  vial.h  vodoley.cpp  vodoley.h  vodoley.json  vodoleymodule.cpp  vodoleymodule.h
src/app/: CMakeLists.txt  kumir2-launcher.cpp
src/app/kumir2-xrun/: CMakeLists.txt
src/kumir2-libs/dataformats/: ast.cpp  ast.h  ast_algorhitm.h  ast_expression.h  ast_module.h  ast_statement.h  ast_variable.h  astext.h  kumfile.cpp  kumfile.h  lexem.h  lexemtype.h
src/kumir2-libs/docbookviewer/: contentview.cpp  docbookfactory.cpp  docbookview_impl.cpp  printrenderer.cpp
src/kumir2-libs/extensionsystem/: CMakeLists.txt  commandlineparameter.cpp  commandlineparameter.h  kplugin.h  pluginmanager.cpp  pluginmanager.h  pluginmanager_impl.cpp  settings.cpp
src/kumir2-libs/stdlib/: kumirstdlib.hpp
src/kumir2-libs/vm/: context.hpp  variant.hpp  vm.hpp  vm_breakpoints_table.hpp  vm_tableelem.hpp
src/kumir2-libs/widgets/: declarativesettingspage.h  draw_turtle_field.cpp  pultlogger.cpp  pultlogger.h  secondarywindow.cpp
src/plugins/coregui/: debuggerview.cpp  defaultstartpage.cpp  kumirprogram.cpp  kumirprogram.h  mainwindow.cpp  mainwindow.h  plugin.cpp  plugin.h  side.cpp  statusbar.cpp  tabwidgetelement.cpp  terminal.cpp  terminal.h  terminal_onesession.cpp  terminal_onesession.h  terminal_plane.cpp  terminal_plane.h
src/plugins/coursemanager/: course_model.cpp  course_model.h  coursemanager_plugin.cpp  coursemanager_plugin.h
src/plugins/editor/: CMakeLists.txt  editcommands.cpp  editcommands.h  editor.cpp  editor.h  editorplane.cpp  editorplane.h  editorplugin.cpp  editorplugin.h  findreplace.cpp  (+8 more)
userdocs/: ActorJAOS.xml  ActorKeyboardLayout.xml
(+43 files in other folders)
